<resources>
    <string name="app_name">DutyEyes</string>
    <string name="no_streams">You don\'t have any video streams. Add one from settings.</string>
    <string name="settings">Settings</string>
    <string name="add_stream">Add camera</string>
    <string name="add_stream_url">Add stream url</string>
    <string name="port">Port</string>
    <string name="ip">Camera IP</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="error_onvif">Can\'t find camera. Check logs</string>
    <string name="camera_name">Camera name (optional)</string>
    <string name="stream_added">Camera added.</string>
    <string name="stream_url">Stream url</string>
    <string name="cancel">Cancel</string>
    <string name="use_exo_player">Use exo player</string>
    <string name="reopen_app_player_change">Changed default player. Close app and open again.</string>
</resources>